@@ -98,6 +98,12 @@ specifier|final
 class|class
 name|CodecUtil
 block|{
+DECL|method|CodecUtil
+specifier|private
+name|CodecUtil
+parameter_list|()
+block|{}
+comment|// no instance
 DECL|field|CODEC_MAGIC
 specifier|private
 specifier|final
