@@ -31,11 +31,17 @@ comment|/**  * Class to encode java's UTF16 char[] into UTF8 byte[]  * without a
 end_comment
 begin_class
 DECL|class|UnicodeUtil
-specifier|final
 specifier|public
+specifier|final
 class|class
 name|UnicodeUtil
 block|{
+DECL|method|UnicodeUtil
+specifier|private
+name|UnicodeUtil
+parameter_list|()
+block|{}
+comment|// no instance
 DECL|field|UNI_SUR_HIGH_START
 specifier|public
 specifier|static
